Style reacord list page for mobile

--- a/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.html
+++ b/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.html
@@ -4,6 +4,10 @@
       <button mat-fab color="primary" (click)="openAddDialog()">
         <mat-icon>add</mat-icon>
       </button>
+      <button mat-raised-button color="primary" (click)="openAddDialog()">
+        <mat-icon>add</mat-icon>
+        Add Record
+      </button>
       <mat-form-field>
         <mat-label>Type to filter the table</mat-label>
         <input matInput #filter />
