--- a/libs/record-list/table-records/src/lib/table-records/table-records.component.html
+++ b/libs/record-list/table-records/src/lib/table-records/table-records.component.html
@@ -2,17 +2,19 @@
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-    <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+    <td mat-cell *matCellDef="let row" data-col="name">{{ row.name }}</td>
   </ng-container>
   <!-- Department Column -->
   <ng-container matColumnDef="department">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Department</th>
-    <td mat-cell *matCellDef="let row">{{ row.department }}</td>
+    <td mat-cell *matCellDef="let row" data-col="department">
+      {{ row.department }}
+    </td>
   </ng-container>
   <!-- Salary Column -->
   <ng-container matColumnDef="salary">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Salary</th>
-    <td mat-cell *matCellDef="let row">{{ row.salary }}</td>
+    <td mat-cell *matCellDef="let row" data-col="salaray">{{ row.salary }}</td>
   </ng-container>
   <!-- Actions Column -->
   <ng-container matColumnDef="actions">
@@ -26,6 +28,10 @@
       >
         <mat-icon>visibility</mat-icon>
       </button>
+      <button mat-raised-button color="primary" (click)="openViewDialog(row)">
+        <mat-icon>visibility</mat-icon>
+        View Record
+      </button>
       <button
         mat-icon-button
         color="primary"
@@ -34,6 +40,10 @@
       >
         <mat-icon>settings</mat-icon>
       </button>
+      <button mat-raised-button color="primary" (click)="openEditDialog(row)">
+        <mat-icon>settings</mat-icon>
+        Edit Record
+      </button>
       <button
         mat-icon-button
         color="warn"
@@ -41,6 +51,10 @@
         (click)="openDeleteDialog(row)"
       >
         <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-raised-button color="warn" (click)="openDeleteDialog(row)">
+        <mat-icon>delete</mat-icon>
+        Delete Record
       </button>
     </td>
   </ng-container>
