--- a/libs/shared/styles/src/lib/scss/components/shell.scss
+++ b/libs/shared/styles/src/lib/scss/components/shell.scss
@@ -5,4 +5,10 @@
   padding-right: $shell-gutter;
   margin: auto;
   width: 100%;
+
+  @include breakpoint-down(mobile) {
+    max-width: calc(#{$shell-max-width} + #{$shell-gutter-mobile} * 2);
+    padding-left: $shell-gutter-mobile;
+    padding-right: $shell-gutter-mobile;
+  }
 }
