Move records service to own lib; Update table onChanges response

--- a/libs/record-list/dialog-view-record/src/lib/dialog-view-record/dialog-view-record.component.html
+++ b/libs/record-list/dialog-view-record/src/lib/dialog-view-record/dialog-view-record.component.html
@@ -53,10 +53,10 @@
         />
       </mat-form-field>
       <mat-form-field>
-        <mat-label>Salaray</mat-label>
+        <mat-label>Salary</mat-label>
         <input
           matInput
-          placeholder="Salaray"
+          placeholder="Salary"
           [value]="data.salary"
           aria-readonly="true"
           readonly
