--- a/libs/record-list/dialog-edit-record/src/lib/dialog-edit-record/dialog-edit-record.component.html
+++ b/libs/record-list/dialog-edit-record/src/lib/dialog-edit-record/dialog-edit-record.component.html
@@ -48,10 +48,10 @@
         }}</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <mat-label>Salaray</mat-label>
+        <mat-label>Salary</mat-label>
         <input
           matInput
-          placeholder="Salaray"
+          placeholder="Salary"
           formControlName="salary"
           required
         />
