--- a/libs/record-list/table-records/src/lib/table-records/table-records.component.html
+++ b/libs/record-list/table-records/src/lib/table-records/table-records.component.html
@@ -14,7 +14,7 @@
   <!-- Salary Column -->
   <ng-container matColumnDef="salary">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Salary</th>
-    <td mat-cell *matCellDef="let row" data-col="salaray">{{ row.salary }}</td>
+    <td mat-cell *matCellDef="let row" data-col="salary">{{ row.salary }}</td>
   </ng-container>
   <!-- Actions Column -->
   <ng-container matColumnDef="actions">
