--- a/libs/record-list/dialog-add-record/src/lib/dialog-add-record/dialog-add-record.component.html
+++ b/libs/record-list/dialog-add-record/src/lib/dialog-add-record/dialog-add-record.component.html
@@ -6,7 +6,7 @@
         <mat-label>Name</mat-label>
         <input matInput placeholder="Name" formControlName="name" required />
         <mat-error *ngIf="form.controls.name.invalid">{{
-          getErrorMessage(form.controls.name)
+          getErrorMessage(form.controls.name, 'name')
         }}</mat-error>
       </mat-form-field>
       <mat-form-field>
@@ -18,21 +18,21 @@
           required
         />
         <mat-error *ngIf="form.controls.department.invalid">{{
-          getErrorMessage(form.controls.department)
+          getErrorMessage(form.controls.department, 'department')
         }}</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Email</mat-label>
         <input matInput placeholder="Email" formControlName="email" required />
         <mat-error *ngIf="form.controls.email.invalid">{{
-          getErrorMessage(form.controls.email)
+          getErrorMessage(form.controls.email, 'email')
         }}</mat-error>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Phone</mat-label>
         <input matInput placeholder="Phone" formControlName="phone" required />
         <mat-error *ngIf="form.controls.phone.invalid">{{
-          getErrorMessage(form.controls.phone)
+          getErrorMessage(form.controls.phone, 'phone')
         }}</mat-error>
       </mat-form-field>
       <mat-form-field>
@@ -44,7 +44,7 @@
           required
         />
         <mat-error *ngIf="form.controls.address.invalid">{{
-          getErrorMessage(form.controls.address)
+          getErrorMessage(form.controls.address, 'address')
         }}</mat-error>
       </mat-form-field>
       <mat-form-field>
@@ -56,7 +56,7 @@
           required
         />
         <mat-error *ngIf="form.controls.salary.invalid">{{
-          getErrorMessage(form.controls.salary)
+          getErrorMessage(form.controls.salary, 'salary')
         }}</mat-error>
       </mat-form-field>
     </form>
