--- a/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.html
+++ b/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.html
@@ -1,5 +1,10 @@
 <div class="record-list-page">
   <div class="shell">
+    <button mat-raised-button color="primary" (click)="logout()">
+      <mat-icon>logout</mat-icon>
+      Logout
+    </button>
+
     <div class="record-list-page__head">
       <button mat-fab color="primary" (click)="openAddDialog()">
         <mat-icon>add</mat-icon>
