--- a/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.scss
+++ b/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.scss
@@ -28,7 +28,10 @@
     }
   }
   mat-form-field {
+    margin-left: auto;
+
     @media (max-width: 767px) {
+      margin-left: 0;
       width: 100%;
     }
   }
