--- a/libs/login/login-form/src/lib/login-form/login-form.component.scss
+++ b/libs/login/login-form/src/lib/login-form/login-form.component.scss
@@ -1,3 +1,17 @@
 mat-form-field {
   width: 100%;
 }
+
+mat-form-field + button {
+  margin-top: 16px;
+
+  @media (max-width: 767px) {
+    margin-top: 8px;
+  }
+}
+
+button {
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+}
