--- a/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.scss
+++ b/libs/record-list/record-list-page/src/lib/record-list-page/record-list-page.component.scss
@@ -1,27 +1,29 @@
+@import 'index';
+
 .record-list-page {
   padding: 40px 0;
 
-  @media (max-width: 767px) {
-    padding: 20px 0;
+  @include breakpoint-down(mobile) {
+    padding: 24px 0 32px;
   }
 
   .record-list-page__head {
     display: flex;
     justify-content: space-between;
 
-    @media (max-width: 767px) {
+    @include breakpoint-down(mobile-medium) {
       display: block;
     }
   }
   button:first-of-type {
-    @media (max-width: 767px) {
+    @include breakpoint-down(mobile-medium) {
       display: none;
     }
   }
   button + button {
     display: none;
 
-    @media (max-width: 767px) {
+    @include breakpoint-down(mobile-medium) {
       display: inline-flex;
       width: 100%;
       margin-bottom: 16px;
@@ -30,9 +32,23 @@
   mat-form-field {
     margin-left: auto;
 
-    @media (max-width: 767px) {
+    @include breakpoint-down(mobile-medium) {
       margin-left: 0;
       width: 100%;
     }
   }
+}
+capital-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 100;
+}
+capital-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 50;
 }
