--- a/libs/shared/header/src/lib/header/header.component.scss
+++ b/libs/shared/header/src/lib/header/header.component.scss
@@ -1,4 +1,30 @@
+@import 'index';
 h2 {
   margin-right: auto;
   margin-bottom: 0;
+}
+h3 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-bottom: 0;
+  font-size: 14px;
+  min-width: 155px;
+  animation: forwards fade-in 0.3s ease-out;
+
+  @include breakpoint-down(mobile-medium) {
+    display: none;
+  }
+}
+h3 span {
+  font-weight: 300;
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
 }
