--- a/libs/login/login-page/src/lib/login-page/login-page.component.scss
+++ b/libs/login/login-page/src/lib/login-page/login-page.component.scss
@@ -3,7 +3,7 @@
 .login-page {
   min-height: 440px;
 
-  @include breakpoint-down(tablet) {
+  @include breakpoint-down(mobile) {
     min-height: 0;
   }
 
@@ -12,7 +12,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 50%;
+    width: 38.196%;
     height: 100%;
     background-image: url(/assets/images/login-bg.jpg);
     background-size: cover;
@@ -20,7 +20,7 @@
     background-repeat: no-repeat;
     pointer-events: none;
 
-    @include breakpoint-down(tablet) {
+    @include breakpoint-down(mobile) {
       width: 100%;
       opacity: 0.4;
     }
@@ -31,13 +31,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 50%;
+    width: 38.196%;
     height: 100%;
     background-color: #000;
     opacity: 0.5;
     pointer-events: none;
 
-    @include breakpoint-down(tablet) {
+    @include breakpoint-down(mobile) {
       width: 100%;
       background-color: #fff;
     }
@@ -48,19 +48,22 @@
     margin-right: auto;
     max-width: 600px;
   }
-
   .login-page__body {
     padding: 40px 0;
     position: absolute;
     z-index: 1;
     top: 37%;
-    left: 50vw;
-    width: 50vw;
-    min-width: 320px;
-    max-width: calc((#{$shell-max-width} + #{$shell-gutter} * 2) / 2);
+    left: 38.196vw;
+    width: 61.804vw;
+    max-width: calc((#{$shell-max-width} + #{$shell-gutter} * 2) * 0.61804);
     transform: translateY(-50%);
 
-    @include breakpoint-down(tablet) {
+    @include breakpoint-down(small-desktop) {
+      left: auto;
+      right: 0;
+    }
+
+    @include breakpoint-down(mobile) {
       position: relative;
       margin: 5vh auto 40px auto;
       top: 0;
